compiler/testData/diagnostics/tests/dataClasses/dataObjectDisabled.kt
// RUN_PIPELINE_TILL: FRONTEND
// LANGUAGE: -DataObjects
<!UNSUPPORTED_FEATURE!>data<!> object Object
